Add paths to tp2

--- a/tps/tp2/tp2.tex
+++ b/tps/tp2/tp2.tex
@@ -170,9 +170,25 @@ En base a los gráficos anteriores:
 
 \item Obtener diferentes registros y gráficos para caminos circulares con diferentes valores (positivos y negativos) de velocidades lineales y angulares (utilizar todas las combinaciones de signos posibles). Indicar en los gráficos el sentido de avance del robot.
 
-\item Describir cuál sería la secuencia de comandos de velocidad a aplicar al robot para seguir uno de los caminos mostrados en la figura 2 (elegir solo uno).
+\item Describir cuál sería la secuencia de comandos de velocidad a aplicar al robot para seguir uno de los caminos mostrados en la Figura~\ref{fig:trajectories} (elegir solo uno).
 
 \end{enumerate}
+
+
+\begin{figure}[!htbp]
+    \centering
+    \subfloat[]
+    {
+        \includegraphics[width=0.2\columnwidth]{./images/path_a.pdf}
+    }
+    \hspace{3cm}
+    \subfloat[]
+    {
+        \includegraphics[width=0.2\columnwidth]{./images/path_b.pdf}
+    }
+    \caption{Caminos cuadrados.}
+    \label{fig:trajectories}
+\end{figure}
 
 \printbibliography
 
