Add slam images

--- a/teoricas/teorica_06/src/localization.tex
+++ b/teoricas/teorica_06/src/localization.tex
@@ -1,6 +1,48 @@
-Vídeos para armar estas slides:
-Cyrill Stachniss Bayes: \url{https://youtu.be/0lKHFJpaZvE}
-Cyrill Stachniss KF y EKF: \url{https://youtu.be/E-6paM_Iwfc}
-Chebrolu EKF Localization: \url{https://youtu.be/PiCC-SxWlH8}
-Cyrill Stachniss Particle Filter: \url{https://youtu.be/MsYlueVDLI0}
-Slides de eci 2012
+\begin{frame}
+    \frametitle{Curso de Cyrill Stachniss}
+    
+    Vídeos para armar estas slides:
+    \begin{itemize}
+        \item     Cyrill Stachniss Bayes: \url{https://youtu.be/0lKHFJpaZvE}
+        \item Cyrill Stachniss KF y EKF: \url{https://youtu.be/E-6paM_Iwfc}
+        \item Chebrolu EKF Localization: \url{https://youtu.be/PiCC-SxWlH8}
+        \item Cyrill Stachniss Particle Filter: \url{https://youtu.be/MsYlueVDLI0}
+        \item Slides de ECI 2012
+    \end{itemize}
+    
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{Curso de Cyrill Stachniss}
+    
+    Vídeos para armar estas slides:
+    \begin{itemize}
+        \item Cyrill Stachniss Bayes: \url{https://youtu.be/0lKHFJpaZvE}
+        \item Cyrill Stachniss KF y EKF: \url{https://youtu.be/E-6paM_Iwfc}
+        \item Chebrolu EKF Localization: \url{https://youtu.be/PiCC-SxWlH8}
+        \item Cyrill Stachniss Particle Filter: \url{https://youtu.be/MsYlueVDLI0}
+        \item Slides de ECI 2012
+    \end{itemize}
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Bayes Filter}
+    
+    \note{Información obtenida de Cyrill Stachniss Bayes: https://youtu.be/0lKHFJpaZvE}
+   
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Extended Kalman Filter}
+    
+    \note{Información obtenida de:
+        Cyrill Stachniss KF y EKF: https://youtu.be/E-6paM_Iwfc
+        Chebrolu EKF Localization: https://youtu.be/PiCC-SxWlH8}
+\end{frame}
+
+
+
+
