--- a/teoricas/teorica_08/slides.tex
+++ b/teoricas/teorica_08/slides.tex
@@ -15,7 +15,7 @@
 % add math preamble
 \input{../../common/math_preamble}
 
-\title{Localización}
+\title{SLAM}
 \author{}
 \institute{Universidad Nacional de Rosario}
 %\date{\scriptsize{Julio 1, 2021}}
@@ -26,8 +26,8 @@
 	% add title page
 	\frame{\titlepage}
 	
-	\section{Lopcalización}
-	\input{src/localization.tex}
+	\section{SLAM}
+	\input{src/slam.tex}
 	
 	\section{Bibliografía}
 	\input{src/bibliography.tex}
