--- a/teoricas/teorica_06/slides.tex
+++ b/teoricas/teorica_06/slides.tex
@@ -26,7 +26,7 @@
 	% add title page
 	\frame{\titlepage}
 	
-	\section{Lopcalización}
+	\section{Localización}
 	\input{src/localization.tex}
 	
 	\section{Bibliografía}
