Add slam images

--- a/teoricas/teorica_06/src/bibliography.tex
+++ b/teoricas/teorica_06/src/bibliography.tex
@@ -1,6 +1,6 @@
 \begin{frame}
 	\frametitle{Bibliografía}
-	\nocite{hartley2003multiple}
+	\nocite{thrun2005probabilistic}
 	
 	\printbibliography
 	
