Remove overlapped correlatives

--- a/teoricas/teorica_01/src/course_organization.tex
+++ b/teoricas/teorica_01/src/course_organization.tex
@@ -40,11 +40,11 @@
 	
 	Correlativas:
 	\begin{itemize}
-		\item Álgebra Lineal
+		% \item Álgebra Lineal (la requiere métodos numéricos)
 		\item Probabilidad y Estadística
-		\item Complementos de Matemática I
-		\item Métodos numéricos
-		\item Estructura de Datos y Algoritmos II
+		% \item Complementos de Matemática I (la requiere Estructura de Datos y Algoritmos II que es requerida por IIA)
+		\item Métodos numéricos 
+		%\item Estructura de Datos y Algoritmos II (la requiere Intro. Intel. Artificial)
 		\item Sistemas Operativos I
 		\item Introducción a la Inteligencia Artificial
 	\end{itemize}
