change title in tp3

--- a/tps/tp3/tp3.tex
+++ b/tps/tp3/tp3.tex
@@ -8,7 +8,7 @@
 
 \codigo{R-521}
 \materia{Robótica Móvil}
-\titulo{Transformaciones}
+\titulo{Visión por Computadora: Triangulación y Proyección}
 
 \soluciones
 \commentstrue
