--- a/tps/tp1/tp1.tex
+++ b/tps/tp1/tp1.tex
@@ -54,7 +54,7 @@ Esta práctica es para ponerse a punto con transformaciones.
     \item un robot A que encuentra en la posición $(2,3)$ con orientación \SI{45}{\degree} en coordenadas del mundo
     \item un robot B que se encuentra en la posición $(1,1)$ con orientación \SI{-45}{\degree} en el sistema de coordenadas del robot A.
     \item un punto $\worldPoint1 = (1,5)$ en coordenadas del mundo.
-    \item un punto $\worldPoint2 = (1,2)$ en coordenadas del robot A.
+    \item un punto $\toCoord{\point}{A}2 = (1,2)$ en coordenadas del robot A.
 \end{itemize}
 Resuelva:
 \begin{enumerate}
@@ -64,7 +64,12 @@ Resuelva:
     \item ¿Cuál es la pose del robot B en coordenadas del Mundo?
 \end{enumerate}
 
-\ejercicio Data la pose del robot en el mundo: $\transform{W}{B}$. Si se tiene la trayectoria realizada por la cámara $C$ (montada sobre el robot). ¿Qué procedimiento hay que realizar para obtener la trayectoria del robot en el mundo, sabiendo la transformación $\transform{B}{C}$?
+\ejercicio Data la pose del robot (Body) en el mundo: $\transform{W}{B}$. Si se tiene el camino realizado por la cámara $C$ (montada sobre el robot) en el marco de coordenadas de la cámara inicial. Sabiendo la transformación $\transform{B}{C}$, 
+\begin{itemize}
+	\item ¿Qué procedimiento hay que realizar para obtener el camino realizado por la cámara en el sistema de coordenadas del mundo?
+	\item ¿Qué procedimiento hay que realizar para obtener el camino realizado por el robot (Body) en el sistema de coordenadas del mundo?
+\end{itemize}
+
 
 \ejercicio Para este ejercicio utilizaremos el dataset EuRoc\footnote{\url{https://projects.asl.ethz.ch/datasets/kmavvisualinertialdatasets}}.
 
@@ -79,6 +84,7 @@ Descargue el archivo \emph{ground-truth} (trayectoria real realizada por el robo
     
     \item Modifique el script para que genere una imagen con ambos \emph{ground-truth} (el camino de la IMU y el camino de la cámara).
 \end{enumerate}
+\nota Para la graficación en paython se recomienda utilizar la librería matplotlib\footnote{\url{https://matplotlib.org/}}.
 
 
 
