--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -63,8 +63,8 @@
                 \end{bmatrix} =
                 \rotationCoord{V}{B}
                 \begin{bmatrix}
-                    \toCoord{x}{A}\\
-                    \toCoord{y}{A}
+                    \toCoord{x}{B}\\
+                    \toCoord{y}{B}
                 \end{bmatrix}
             \end{equation*}
         \end{minipage}
@@ -81,8 +81,8 @@
             \toCoord{y}{A}
         \end{bmatrix} &=
         \begin{bmatrix}
-            \toCoord{x}{V}\\
-            \toCoord{y}{V}
+            \toCoord{x}{B}\\
+            \toCoord{y}{B}
         \end{bmatrix} +
         \begin{bmatrix}
             t_x\\
