--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -48,6 +48,12 @@
 \newcommand{\fundamentalMatrix}{\vec{F}}
 \newcommand{\inverse}[1]{{#1}^{-1}}
 
+
+% Localization (State Estiamtion)
+\newcommand{\state}{x}
+\newcommand{\observation}{x}
+\newcommand{\controlCommand}{u}
+
 % Motion model
 \newcommand{\position}{\vec{p}}
 \newcommand{\orientationQuaternion}{\vec{q}}
