--- a/tps/tp1/tp1.tex
+++ b/tps/tp1/tp1.tex
@@ -64,7 +64,7 @@ Resuelva:
     \item ¿Cuál es la pose del robot B en coordenadas del Mundo?
 \end{enumerate}
 
-\ejercicio Data la pose del robot (Body) en el mundo: $\transform{W}{B}$. Si se tiene el camino realizado por la cámara $C$ (montada sobre el robot) en el marco de coordenadas de la cámara inicial. Sabiendo la transformación $\transform{B}{C}$, 
+\ejercicio Data la pose del robot (Body) en el mundo: $\transform{W}{B}$. Si se tiene el camino (conjunto de poses $\transform{C_{0}}{C_{i}}$ con $i = 1 \dots n$) realizado por la cámara $C$ (montada sobre el robot) en el marco de coordenadas de la cámara inicial $C_{0}$. Sabiendo la transformación $\transform{B}{C}$, 
 \begin{itemize}
 	\item ¿Qué procedimiento hay que realizar para obtener el camino realizado por la cámara en el sistema de coordenadas del mundo?
 	\item ¿Qué procedimiento hay que realizar para obtener el camino realizado por el robot (Body) en el sistema de coordenadas del mundo?
