--- a/tps/tp1/tp1.tex
+++ b/tps/tp1/tp1.tex
@@ -84,7 +84,7 @@ Descargue el archivo \emph{ground-truth} (trayectoria real realizada por el robo
     
     \item Modifique el script para que genere una imagen con ambos \emph{ground-truth} (el camino de la IMU y el camino de la cámara).
 \end{enumerate}
-\nota Para la graficación en paython se recomienda utilizar la librería matplotlib\footnote{\url{https://matplotlib.org/}}.
+\nota Para graficar en python se recomienda utilizar la librería matplotlib\footnote{\url{https://matplotlib.org/}}.
 
 
 
