--- a/tps/tp2/tp2.tex
+++ b/tps/tp2/tp2.tex
@@ -32,7 +32,7 @@ El objetivo del tp es comprender el modelo cinemático y la estimación de pose 
 
     \item En caso de utilizar el framework de \url{https://www.theconstructsim.com} se deberá proveer el link al proyecto.
 
-    \item Además, se deberá entregar un informe realizado en Lyx o latex explicando los pasos realizados y analizando los resultados obtenidos.
+    \item Además, se deberá entregar un informe realizado en Lyx o latex explicando el trabajo y analizando los resultados obtenidos.
 \end{itemize}
 
 
