Bayes Filter derivation

--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -51,7 +51,7 @@
 
 % Localization (State Estiamtion)
 \newcommand{\state}{x}
-\newcommand{\observation}{x}
+\newcommand{\observation}{z}
 \newcommand{\controlCommand}{u}
 
 % Motion model
