--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -56,6 +56,7 @@
 
 % Motion model
 \newcommand{\position}{\vec{p}}
+\newcommand{\orientation}{\vec{O}}
 \newcommand{\orientationQuaternion}{\vec{q}}
 \newcommand{\predictedPosition}{\hat{\vec{p}}}
 \newcommand{\predictedOrientationQuaternion}{\hat{\vec{q}}}
