--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -139,6 +139,7 @@
 \begin{frame}
     \frametitle{Algunas Propiedades de las transformaciones}
 
+	Composición:
     \begin{equation*}
         \transform{}{1}\transform{}{2} =
         \begin{bmatrix}
@@ -155,7 +156,7 @@
         \end{bmatrix}
     \end{equation*}
 
-
+	Inversa:
     \begin{equation*}
         \transform{}{}^{-1}=
         \begin{bmatrix}
@@ -168,6 +169,25 @@
         \end{bmatrix}
     \end{equation*}
 
+\end{frame}
+
+
+\begin{frame}
+	\frametitle{Pose}
+	
+	La Pose (posición y orientación) de un robot es la transformación rototraslacional dada por la posición y orientación del robot en el espacio.
+	
+	Ejemplo: Dado el vector posición $\position$ y la matriz orientación $\orientation$ del robot $\bodyCoordSystem$ en el mundo $\worldCoordSystem$, notamos la pose como $\transform{\worldCoordSystem}{\bodyCoordSystem}$
+	
+	\begin{equation*}
+		\transform{\worldCoordSystem}{\bodyCoordSystem}=
+		\begin{bmatrix}
+			\orientation & \position\\
+			\vec{0} & 1
+		\end{bmatrix}
+	\end{equation*}
+
+	Observar que la pose es una transformación que toma elementos en coordenadas del robot y los devuelve en coordenadas del mundo.
 \end{frame}
 
 
