--- a/teoricas/teorica_03/slides.tex
+++ b/teoricas/teorica_03/slides.tex
@@ -26,7 +26,7 @@
 % add title page
 \frame{\titlepage}
 
-\section{Sensores}
+\section{Percepción}
 \input{src/sensors.tex}
 
 \input{src/encoders.tex}
