--- a/teoricas/teorica_03/src/compass.tex
+++ b/teoricas/teorica_03/src/compass.tex
@@ -72,7 +72,7 @@
 
 \begin{frame}
     \frametitle{Compass}
-    \footnotesize
+    \scriptsize
     Considere un marco de coordenadas inerciales $\{ 0 \}$ con su eje $z$ verticalmente hacia arriba y su eje $x$ apuntando hacia el norte magnético. Por lo tanto, el vector de intensidad del campo magnético $I$ se encuentra en el plano $xz$.
 
     \begin{equation*}
