--- a/teoricas/teorica_03/src/imu.tex
+++ b/teoricas/teorica_03/src/imu.tex
@@ -1,6 +1,6 @@
 \begin{frame}
     \frametitle{Giróscopo o Giroscopio}
-    \footnotesize
+    \scriptsize
     \begin{center}
         \includegraphics[width=0.2\columnwidth]{images/gyroscope.pdf}
     \end{center}
@@ -27,12 +27,12 @@
 \begin{frame}
     \frametitle{Giróscopo: Pricipios giroscópicos}
     \note{https://www.youtube.com/watch?v=nhNg-8RSuKY}
-    \footnotesize
+    \scriptsize
 
     \begin{block}{Rigidez en el espacio}
         Al rotar, un giróscopo permanece en una posición fija en su plano de rotación, independientemente del movimiento de los soportes o el marco.
 
-        La cantidad de rigidez que presenta el giróscopo es directamenete proporcional a su velocidad de rotación (RPM) y su momento de inercia.
+        La cantidad de rigidez que presenta el giróscopo es directamente proporcional a su velocidad de rotación (RPM) y su momento de inercia.
         Mayor velocidad de rotación, entonces mayor rigidez en el espacio.
         Mayor masa y radio efectivo, entonces mayor rigidez en el espacio.
     \end{block}
@@ -91,7 +91,7 @@
 
 \begin{frame}
     \frametitle{Giróscopo MEMS (Microelectromechanical Systems)}
-    \footnotesize
+    \scriptsize
     \note{https://www.analog.com/en/technical-articles/mems-gyroscope-provides-precision-inertial-sensing.html}
 
     \begin{figure}[!h]
