--- a/teoricas/teorica_03/src/event_camera.tex
+++ b/teoricas/teorica_03/src/event_camera.tex
@@ -6,7 +6,7 @@
     
     \begin{figure}[!h]
         \centering
-        \includegraphics[width=\columnwidth]{images/event_camera.png}
+        \includegraphics[width=0.8\columnwidth]{images/event_camera.png}
     \end{figure}
 
 \end{frame}
