--- a/teoricas/teorica_03/src/imu.tex
+++ b/teoricas/teorica_03/src/imu.tex
@@ -96,7 +96,7 @@
 
     \begin{figure}[!h]
         \centering
-        \includegraphics[width=0.3\columnwidth]{images/gyroscope_mems_structure.png}
+        \includegraphics[width=0.2\columnwidth]{images/gyroscope_mems_structure.png}
     \end{figure}
 
 
@@ -104,7 +104,7 @@
 
     \begin{figure}[!h]
         \centering
-        \includegraphics[width=0.4\columnwidth]{images/gyroscope_mems_3.png}
+        \includegraphics[width=0.3\columnwidth]{images/gyroscope_mems_3.png}
     \end{figure}
 
     A medida que la masa resonante se mueve y la superficie en la que está montado el giroscopio gira, la masa y su marco experimentan la aceleración de Coriolis y se trasladan 90 ° del movimiento vibratorio. A medida que aumenta la velocidad de rotación, también cambia el desplazamiento de la masa y la señal derivada de la capacitancia correspondiente.
@@ -126,7 +126,7 @@
     		\includegraphics[width=0.3\columnwidth]{images/accelerometer_mems2.pdf}
     	}
     \end{figure}
-    \footnotesize
+    \scriptsize
     \begin{block}{Principio de Funcionamiento}
         Mide la aceleración midiendo el cambio en la capacitancia. Su microestructura se parece a esto. Tiene una masa unida a un resorte que se limita a moverse en una dirección y placas exteriores fijas. Entonces, cuando se aplicará una aceleración en la dirección particular, la masa se moverá y la capacitancia entre las placas y la masa cambiará. Este cambio de capacitancia será medido, procesado y corresponderá a un valor de aceleración particular.
     \end{block}
