change size text

--- a/teoricas/teorica_03/src/laser.tex
+++ b/teoricas/teorica_03/src/laser.tex
@@ -26,7 +26,7 @@
         }
     \end{figure}
 
-    \footnotesize
+    \scriptsize
     \begin{block}{Principio de funcionamiento}
      Un LiDAR (\emph{Light Detection And Ranging}) o Laser Rangefinder emite pulsos de luz mediante un diodo láser (infrarrojo). Si el rayo láser es reflejado por un objeto, el rayo reflejado es recibido por el sensor.
      
